# VCU-State-Testing

./: CMakeLists.txt
REFStateMachine/: Main.cpp  Motor.cpp  Motor.h  StateMachine.cpp  StateMachine.h
test/: Motor.cpp  Motor.hpp  StateMachine.cpp  StateMachine.hpp  testrun.cpp
test_restored/: Motor  Motor.cpp  Motor.hpp  StateMachine.cpp  StateMachine.hpp  makefile  testrun.cpp
